2015-04-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <--node>: Look through node 
	names of file for argument, and if not found look for a 
	case-insensitive initial match.
	* info/nodes.c (info_get_node_of_file_buffer): Remove doubled 
	condition.

2015-04-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Invoking install-info): Include ellipsis 
	within square brackets in synopsis.  Report from Benno 
	Schulenberg.

2015-04-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Not Ending a Sentence): no need for @:
	after @code.

	* util/srclist.txt: update slave build-aux/texinfo.tex
	(required by automake) from master doc/texinfo.

	* util/htmlxref.cnf (perl): add entry pointing to
	http://www.gnu.org/software/perl/manual.

2015-03-29  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh, tp/maintain/regenerate_cmd_tests.sh, 
	tp/tests/Makefile.am, tp/tests/htmlxref*/Makefile.am, 
	tp/tests/parser_tests.sh, tp/tests/run_parser_all.sh: 
	avoid changing directory when running tests.  
	Arrange to be able to run tests directly in subdirectories 
	for tests that need it, namely tests in tests/htmlxref*.
	* tp/tests/test_scripts/*, tp/tests/htmlxref*/test_scripts/: 
	generate/regenerate.

2015-03-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (next_index_match) <substring search>: Find 
	non-case-matching initial matches.

2015-03-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (index_initial): New variable.
	(info_index_search): Initialize index_initial as well as 
	index_partial.
	(next_index_match): Search for initial substrings after 
	searching for exact matches.
	(info_virtual_index): Call next_index_match to get index entries 
	in order.

2015-03-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Permit zero-length matches, so 
	that "^" doesn't search through entire file.  Pass REG_NOTBOL 
	flag to regexec.
